--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
 
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
     compile 'com.android.support:recyclerview-v7:26.1.0'
 }
